<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/Ara"
        android:icon="@drawable/ic_search_24dp"
        android:title="@string/menuAra"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/TarihSec"
        android:title="@string/tarihSec"
        app:showAsAction="never" />
    <item
        android:id="@+id/SayfayiKaydet"
        android:title="@string/sayfayiKaydet"
        app:showAsAction="never" />
    <item
        android:id="@+id/HataBildir"
        android:title="@string/hataBildir"
        app:showAsAction="never" />
    <item
        android:id="@+id/Hakkinda"
        android:title="@string/hakkinda"
        app:showAsAction="never" />
</menu>