<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.umutd.ilksayfalar.Hakkinda">

    <ImageView
        android:id="@+id/hakkindaIcon"
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        app:srcCompat="@mipmap/ic_launcher"
        android:contentDescription="@string/hakkindaIconBilgi" />

    <TextView
        android:id="@+id/txtAd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/hakkindaAd"
        android:layout_below="@+id/hakkindaIcon"
        android:layout_marginTop="8dp"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtVersiyon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtAd"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/hakkindaVersiyon"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/txtBilgi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtVersiyon"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="10dp"
        android:lineSpacingExtra="2sp"
        android:text="@string/hakkindaYazi"
        android:textAlignment="center"
        android:textSize="16sp" />

    <Button
        android:id="@+id/btnPaylas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btnWebSite"
        android:layout_alignBottom="@+id/btnWebSite"
        android:layout_toEndOf="@+id/txtVersiyon"
        android:text="@string/hakkindaPaylas" />

    <Button
        android:id="@+id/btnWebSite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtBilgi"
        android:layout_marginTop="18dp"
        android:layout_toStartOf="@+id/txtVersiyon"
        android:text="@string/hakkindaWebSite" />

</RelativeLayout>
